// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GridRow > Default > should render as elements 1`] = `
<DocumentFragment>
  <span
    class="sc-bczSft fnWBbu"
    data-rc="GridRow"
  >
    GridRow Content
  </span>
</DocumentFragment>
`;

exports[`GridRow > Default > should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bczSft fnWBbu"
    data-rc="GridRow"
  >
    GridRow Content
  </div>
</DocumentFragment>
`;

exports[`GridRow Default should render as elements 1`] = `
<DocumentFragment>
  <span
    class="sc-bcXHqe cCkuwp"
    data-rc="GridRow"
  >
    GridRow Content
  </span>
</DocumentFragment>
`;

exports[`GridRow Default should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXHqe cCkuwp"
    data-rc="GridRow"
  >
    GridRow Content
  </div>
</DocumentFragment>
`;
